--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -35,12 +35,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:theme="@style/ActionBar"
+            android:layout_height="547dp"
             android:layout_marginLeft="50px"
             android:layout_marginRight="50px"
-            android:layout_marginTop="100px">
+            android:layout_marginTop="50px"
+            android:orientation="vertical"
+            android:theme="@style/ActionBar">
 
             <TextView
                 android:id="@+id/lblUserRegistro"
