--- a/app/src/main/res/layout/activity_registro__b.xml
+++ b/app/src/main/res/layout/activity_registro__b.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -50,23 +50,24 @@
                 android:gravity="center"
                 android:text="@string/birthDate" />
 
-            <CalendarView
+            <DatePicker
                 android:id="@+id/birthDate"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
+                android:datePickerMode="spinner"
+                android:calendarViewShown="false"
                 />
 
             <TextView
                 android:id="@+id/lblCountry"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:gravity="center_vertical"
+                android:layout_height="50dp"
                 android:text="@string/country" />
             
             <Spinner
                 android:id="@+id/spinnerRegistroCountry"
                 android:layout_width="match_parent"
-                android:gravity="center"
+                android:textAlignment="center"
                 android:layout_height="50dp"></Spinner>
 
             <Button
@@ -81,4 +82,4 @@
 
     </LinearLayout>
 
-</ScrollView>
+</RelativeLayout>
