--- a/app/src/main/res/layout/activity_registro__b.xml
+++ b/app/src/main/res/layout/activity_registro__b.xml
@@ -71,7 +71,7 @@
                 android:layout_height="50dp"></Spinner>
 
             <Button
-                android:id="@+id/btnNextRegistroB"
+                android:id="@+id/btnSaveRegistro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorControlNormalActionBar"
