--- a/app/src/main/res/layout/activity_registro_a.xml
+++ b/app/src/main/res/layout/activity_registro_a.xml
@@ -34,6 +34,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/registroAContainer"
             android:layout_width="match_parent"
             android:layout_height="547dp"
             android:layout_marginLeft="50px"
