--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="colorPrimaryDarkActionBar">#00C853</color>
     <color name="colorControlNormalActionBar">#00B0FF</color>
     <color name="colorAccentActionBar">#0091EA</color>
+
+    <!-- Color for Validator -->
+    <color name="emptyFieldValidator">#E91E63</color>
 </resources>
