--- a/app/src/main/res/layout/activity_registro_a.xml
+++ b/app/src/main/res/layout/activity_registro_a.xml
@@ -53,6 +53,7 @@
                 android:id="@+id/txtUsuarioRegistro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="50"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text="@string/no_text" />
@@ -68,6 +69,7 @@
                 android:id="@+id/txtPasswordRegistro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="50"
                 android:ems="10"
                 android:inputType="textPassword" />
 
@@ -82,6 +84,7 @@
                 android:id="@+id/txtNombreRegistro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="100"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text="@string/no_text" />
@@ -98,6 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:maxLength="100"
                 android:inputType="textPersonName"
                 android:text="@string/no_text" />
 
@@ -113,6 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:maxLength="5"
                 android:inputType="textPersonName"
                 android:text="@string/no_text" />
 
@@ -128,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:maxLength="100"
                 android:inputType="textEmailAddress" />
 
             <Button
