--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.markf.dnomics.Registro_B">
+    tools:context="com.example.markf.dnomics.Dashboard">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,36 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/birthDate" />
-
-            <DatePicker
-                android:id="@+id/birthDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:datePickerMode="spinner"
-                android:calendarViewShown="false"
-                />
-
-            <TextView
-                android:id="@+id/lblCountry"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="@string/country" />
-            
-            <Spinner
-                android:id="@+id/spinnerRegistroCountry"
-                android:layout_width="match_parent"
-                android:textAlignment="center"
-                android:layout_height="50dp"></Spinner>
-
-            <Button
-                android:id="@+id/btnSaveRegistro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorControlNormalActionBar"
-                android:text="@string/guardar"
-                android:textColor="@color/colorControlNormal" />
-
+                android:text="@string/Dashboard" />
         </LinearLayout>
 
     </LinearLayout>
