--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -35,6 +35,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Marco Fuentes"
                 android:textColor="@android:color/white"
+                android:id="@+id/lblUserName"
                 android:textSize="21sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -68,7 +69,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="10dp"
-                        android:text="19"
+                        android:id="@+id/lblDraftNumber"
+                        android:text="0"
                         android:textColor="@color/colorAccentActionBar"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -91,7 +93,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="10dp"
-                        android:text="5"
+                        android:id="@+id/lblSubmittedNumber"
+                        android:text="0"
                         android:textColor="@color/colorAccentActionBar"
                         android:textSize="20sp"
                         android:textStyle="bold" />
