--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -24,7 +24,7 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="35dp"
-                android:src="@drawable/me"
+                android:src="@drawable/user"
                 app:civ_border_color="@color/colorPrimaryDarkActionBar"
                 app:civ_border_width="2dp" />
 
