--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -15,7 +15,7 @@ android:background="@color/lightgray">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:background="@color/colorPrimaryDarkActionBar"
+        android:background="@drawable/ng4"
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -25,17 +25,17 @@ android:background="@color/lightgray">
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="35dp"
             android:src="@drawable/user"
-            app:civ_border_color="@color/colorPrimaryDarkActionBar"
+            app:civ_border_color="@android:color/white"
             app:civ_border_width="2dp" />
 
         <TextView
+            android:id="@+id/lblUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:text="Marco Fuentes"
             android:textColor="@android:color/white"
-            android:id="@+id/lblUserName"
             android:textSize="21sp"
             android:textStyle="bold" />
     </LinearLayout>
