--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -18,7 +18,7 @@
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimaryDarkActionBar">
+                android:background="@color/colorFrogGreen">
 
                 <TextView
                     android:id="@+id/ReportHeaderActivity"
@@ -28,18 +28,18 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="30px"
                     android:text="@string/newreport"
-                    android:textColor="@color/colorTitle"
-                    android:textSize="@dimen/action_title" />
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/action_title_size" />
             </android.support.design.widget.AppBarLayout>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ReportHeaderContainer"
             android:layout_width="match_parent"
-            android:layout_height="547dp"
-            android:layout_marginLeft="50px"
-            android:layout_marginRight="50px"
-            android:layout_marginTop="50px"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/data_screen_padding_left"
+            android:paddingRight="@dimen/data_screen_padding_right"
+            android:paddingTop="@dimen/data_screen_padding_top"
             android:orientation="vertical"
             android:theme="@style/ActionBar">
 
@@ -48,8 +48,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="@dimen/data_screen_icon_size"
+                    android:layout_height="@dimen/data_screen_icon_size"
                     android:src="@drawable/newreport"
                     />
             </LinearLayout>
@@ -58,7 +58,7 @@
                 android:id="@+id/lblReportName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="30px"
+                android:paddingTop="@dimen/data_screen_control_padding_top"
                 android:text="@string/reportname" />
 
             <EditText
@@ -74,7 +74,7 @@
                 android:id="@+id/lblReportDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="30px"
+                android:paddingTop="@dimen/data_screen_control_padding_top"
                 android:text="@string/date" />
 
             <DatePicker
@@ -101,9 +101,9 @@
                 android:id="@+id/btnGoToLineItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorControlNormalActionBar"
+                android:backgroundTint="@color/colorBlue"
                 android:text="@string/guardar"
-                android:textColor="@color/colorControlNormal" />
+                android:textColor="@color/colorWhite" />
         </LinearLayout>
 
     </LinearLayout>
