--- a/app/src/main/res/layout/activity_registro__b.xml
+++ b/app/src/main/res/layout/activity_registro__b.xml
@@ -19,7 +19,7 @@
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimaryDarkActionBar">
+                android:background="@color/colorFrogGreen">
 
                 <TextView
                     android:id="@+id/activityTitleRegistroB"
@@ -28,18 +28,18 @@
                     android:layout_weight="1"
                     android:paddingLeft="30px"
                     android:gravity="center_vertical"
-                    android:textColor="@color/colorTitle"
-                    android:textSize="@dimen/action_title"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/action_title_size"
                     android:text="@string/title_activity_registro" />
             </android.support.design.widget.AppBarLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="700dp"
-            android:layout_marginLeft="50px"
-            android:layout_marginRight="50px"
-            android:layout_marginTop="50px"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/data_screen_padding_left"
+            android:paddingRight="@dimen/data_screen_padding_right"
+            android:paddingTop="@dimen/data_screen_padding_top"
             android:orientation="vertical"
             android:theme="@style/ActionBar">
 
@@ -74,9 +74,9 @@
                 android:id="@+id/btnSaveRegistro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorControlNormalActionBar"
+                android:backgroundTint="@color/colorBlue"
                 android:text="@string/guardar"
-                android:textColor="@color/colorControlNormal" />
+                android:textColor="@color/colorWhite" />
 
         </LinearLayout>
 
