--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -50,7 +50,7 @@
                 <ImageView
                     android:layout_width="@dimen/data_screen_icon_size"
                     android:layout_height="@dimen/data_screen_icon_size"
-                    android:src="@drawable/camera1"
+                    android:src="@drawable/camera"
                     />
             </LinearLayout>
 
