--- a/app/src/main/res/layout/activity_registro_a.xml
+++ b/app/src/main/res/layout/activity_registro_a.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.design.widget.AppBarLayout
+            <!--<android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorFrogGreen">
@@ -30,7 +30,7 @@
                     android:text="@string/title_activity_registro"
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/action_title_size" />
-            </android.support.design.widget.AppBarLayout>
+            </android.support.design.widget.AppBarLayout>-->
         </LinearLayout>
 
         <LinearLayout
