Retrieving user's session from the DB and allow only registered users to be inside the app

--- a/app/src/main/res/layout/activity_registro__b.xml
+++ b/app/src/main/res/layout/activity_registro__b.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.markf.dnomics.Registro_B">
 
+    <ProgressBar
+        android:id="@+id/indeterminateBar"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
