--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -65,19 +65,38 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginTop="10dp"
                             android:text="@string/submitted"
                             android:textSize="20sp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingTop="10dp"
-                            android:id="@+id/lblSubmittedNumber"
-                            android:text="0"
-                            android:textColor="@color/colorDarkBlue"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="horizontal">
 
+                            <TextView
+                                android:id="@+id/lblMinus"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:text="-"
+                                android:textColor="@color/colorRed"
+                                android:textSize="20sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/lblSubmittedNumber"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:text="$0.00"
+                                android:textColor="@color/colorDarkGray"
+                                android:textSize="20sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -91,108 +110,144 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="1"
                             android:text="@string/draft"
                             android:textSize="20sp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingTop="10dp"
-                            android:id="@+id/lblDraftNumber"
-                            android:text="0"
-                            android:textColor="@color/colorRed"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/lblPlus"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:text="+"
+                                android:textColor="@color/colorDarkBlue"
+                                android:textSize="20sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/lblDraftNumber"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:text="$0.00"
+                                android:textColor="@color/colorDarkGray"
+                                android:textSize="20sp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="360dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_gravity="center"
-            android:paddingLeft="25dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:paddingLeft="25dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/lblDraft"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/draftico"
-                    android:textSize="25dp"
-                    android:textColor="@color/colorDarkBlue"/>
-                <TextView
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="25dp" />
+
+                <!--<TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:textSize="15dp"
-                    android:text="@string/draft"/>
+                    android:text="@string/draft"
+                    android:textSize="15dp" />-->
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_weight="1"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/lblSubmitted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/submittedico"
-                    android:textSize="25dp"
-                    android:textColor="@color/colorDarkBlue"/>
-                <TextView
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="25dp" />
+
+                <!--<TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:textSize="15dp"
-                    android:text="@string/submitted"/>
+                    android:text="@string/submitted"
+                    android:textSize="15dp" />-->
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_weight="1"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/lblTicket"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/ticketico"
-                    android:textSize="25dp"
-                    android:textColor="@color/colorDarkBlue"/>
-                <TextView
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="25dp" />
+
+                <!--<TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:textSize="15dp"
-                    android:text="@string/ticket"/>
+                    android:text="@string/ticket"
+                    android:textSize="15dp" />-->
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_weight="1"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/lblSetings"
-                    android:text="@string/setingsico"
-                    android:textSize="25dp"
-                    android:textColor="@color/colorDarkBlue"/>
-                <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:textSize="15dp"
-                    android:id="@+id/dashboardOptions">
+                    android:layout_marginTop="-5dp"
+                    android:text="@string/setingsico"
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="25dp" />
+
+                <Spinner
+                    android:id="@+id/dashboardOptions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-5dp"
+                    android:textSize="15dp">
 
                 </Spinner>
 
